<resources>
    <string name="app_name">Login</string>
    <string name="textview1">UserName</string>
    <string name="userNameInput">Name</string>
    <string name="name">请输入用户名</string>
    <string name="textview">TextView</string>
    <string name="password">PassWord</string>
    <string name="pwd">请输入密码</string>
    <string name="button">登录</string>
    <string name="icon">icon</string>
    <string name="title_activity_second">secondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>